tests/negative/ambiguous_import_name.ax
module ambiguous_import_name;

import ambiguous.a;
import ambiguous.b;

fn main() -> i32 {
    return helper();
}
